text  overlaping image fixed

--- a/style.css
+++ b/style.css
@@ -717,6 +717,10 @@ li{
         width: 100vw;
         flex-wrap: wrap;
     }
+    .About{
+        min-height: 85vh;
+        height: 800px;
+    }
     .About .ContentSection{
         width: unset;
         left: 15%;
